<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/result"
        android:layout_width="330dp"
        android:layout_height="115dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/input"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="88"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_reverse_icon"
        android:drawablePadding="15dp"
        android:hint="@string/anagram_text"
        android:inputType="text"
        android:minHeight="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/filter"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="400dp"
        android:autofillHints="88"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_filter_icon"
        android:drawablePadding="15dp"
        android:hint="@string/anagram_filter"
        android:inputType="text"
        android:minHeight="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />


</androidx.constraintlayout.widget.ConstraintLayout>